Corrected image upload

--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -54,7 +54,7 @@ destination_layout: people
     <center><h5>Profile Image (Optional)</h5></center>
     <br>
     
-    <p style="text-align:left">Please upload the url of your profile image at <a href="https://github.com/CS4SG/CS4SG.github.io/tree/master/assets/img/team"></a> and enter the <b>filename</b> below.</p>
+    <p style="text-align:left">Please upload the url of your profile image at <a href="https://github.com/CS4SG/CS4SG.github.io/tree/master/assets/img/team">https://github.com/CS4SG/CS4SG.github.io/tree/master/assets/img/team</a> and enter the <b>filename</b> below.</p>
 
     <div><input type="text" id="img_link" placeholder="Enter image filename e.g. sample.jpg"/></div>
     <small style="color: red;">*</small><small>If you do not have access to the upload destination mentioned above, please contact <a href = "mailto:kjoseph@buffalo.edu">here</a>.</small>
