--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
       <p>
         You might want to enter information to the website. For example, adding research projects or
         information about a new grant that C4SG just received! Please follow the following steps to add
-        those inforation to the website...
+        those information to the website...
         <ul>
           <li>
             <h3>Select the form according to the catagory of information</h3>
