--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -42,12 +42,21 @@ destination_layout: funds
               <input type="date" id="valid" required="required"/><br/>
             </div>
           </div>
-  
+          
           <div>
+            <select id="isCurrent">
+                <option selected value="">-- Funding time --</option>
+                <option value="current">Current</option>
+                <option value="past">Past</option>
+            </select>
+        </div>
+
+        <div>
           <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
           <center><h5>Choose related research projects</h5></center><div id="tagged" class="hiddenCB"></div>
           <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
-      </div></div>
+          </div>
+        </div>
 
       <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Principal Investigator</h5></center><div id="orator"></div><hr/>
@@ -110,6 +119,7 @@ destination_layout: funds
           const grant_notice = document.getElementById('grant_notice').value;
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
+          const isCurrent = document.getElementById('isCurrent').value
           var pi = talker();
           if(pi === ""){
             //Case for external PI.
@@ -138,6 +148,7 @@ destination_layout: funds
               "grants: "+grants+"\n"+
               "duration: "+duration+"\n"+
               "start: "+start+"\n"+
+              "isCurrent: "+isCurrent+"\n"+
               "tagged_projects: "+tagged+"\n"+
               "tagged_people: "+tagged_people+"\n"+
               "key: "+title+"\n"+
