Fixed Funding Form

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -46,8 +46,8 @@ destination_layout: funds
           <div>
             <select id="isCurrent">
                 <option selected value="">-- Funding time --</option>
-                <option value="current">Current</option>
-                <option value="past">Past</option>
+                <option value="true">Current</option>
+                <option value="false">Past</option>
             </select>
         </div>
 
