--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -121,6 +121,7 @@ destination_layout: post
               "tagged_courses: "+courses.toString()+"\n"+
               "tagged_funding: "+funding.toString()+"\n"+
               "key: "+topic+"\n"+
+              "date: "+dates+"\n"+
               "---"+"\n"+
               msg
   
